@@ -1,3 +1,10 @@
+2007-08-12  Jens Granseuer  <jensgr@gmx.net>
+
+	* theme-thumbnail.c: (create_folder_icon),
+	(create_gtk_theme_pixbuf), (handle_bytes), (message_from_capplet),
+	(message_from_child), (read_pixbuf), (generate_theme_thumbnail):
+	various small tweaks and optimizations
+
 2007-08-08  Jens Granseuer  <jensgr@gmx.net>
 
 	* theme-thumbnail.c: (create_meta_theme_pixbuf):
